--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.4",
   "description": "A draggable and resizable grid layout with responsive breakpoints, for React.",
   "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
     "lint": "make lint",
     "test": "make test",
@@ -41,7 +42,7 @@
     "fast-equals": "^5.0.0",
     "prop-types": "^15.8.1",
     "react-draggable": "^4.4.5",
-    "react-resizable": "^3.0.4"
+    "@sapter/react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
